--- a/m_welfare.html
+++ b/m_welfare.html
@@ -10,7 +10,7 @@
 	</head>
 
 	<body>
-	    <a id="wfl_act" class="wfl-act" href="/activity/Christmas/open_envelope/"><img class="wfl-act__img" src="images/klb-04.png" alt=""></a>
+	    <!--<a id="wfl_act" class="wfl-act" href="/activity/Christmas/open_envelope/"><img class="wfl-act__img" src="images/klb-04.png" alt=""></a>-->
 
 		<!--下拉刷新容器-->
 		<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
