--- a/account/m_account_welfare.html
+++ b/account/m_account_welfare.html
@@ -18,8 +18,9 @@
         <div class="mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
             <a class="mui-control-item" href="#item1">体验福利</a>
             <a class="mui-control-item" href="#item2">理财福利</a>
+            <a class="mui-control-item" href="#item3">媒体单</a>
         </div>
-        <div id="sliderProgressBar" class="mui-slider-progress-bar mui-col-xs-6"></div>
+        <div id="sliderProgressBar" class="mui-slider-progress-bar mui-col-xs-4"></div>
         <div class="mui-slider-group">
             <div id="item1" class="mui-slider-item mui-control-content mui-active" value="1">
             	<div id="scroll1" class="mui-scroll-wrapper">
@@ -64,6 +65,29 @@
 			            <span class="li-04">状态</span>
                     </li>
             	</ul>
+                <ul class="mui-table-view">
+                </ul>
+                </div>
+                </div>
+            </div>
+            <div id="item3" class="mui-slider-item mui-control-content" value="3">
+                <div id="scroll3" class="mui-scroll-wrapper">
+                <div class="mui-scroll">
+                <ul class="mui-table-view">
+                    <!--<li class="li-cai">
+                        <div class="icon">
+                            <div></div>
+                            <h4>理财福利</h4>
+                            <p> 完成：<span><number id="finish_finance"></number>&nbsp;</span>个</p>
+                        </div>
+                    </li>-->
+                    <li class="list clearfix head-02">
+                        <span class="li-01">项目</span>
+                        <span class="li-02">提交手机号</span>
+                        <span class="li-03">提交时间</span>
+                        <span class="li-04">状态</span>
+                    </li>
+                </ul>
                 <ul class="mui-table-view">
                 </ul>
                 </div>
