--- a/html/m_expsubmit_finance.html
+++ b/html/m_expsubmit_finance.html
@@ -22,6 +22,16 @@
 						<label>注册手机号&nbsp;&nbsp;</label>
 						<input id="telnum" type="text" maxlength=11 placeholder="请输入注册手机号">
 					</div>
+					<div class="mui-input-row isfutou-item radio-box" style="display: block;">
+                        <div class="mui-input-row mui-radio">
+                            <label style="display: inline-block;">首投</label>
+                            <input name="is_futou" type="radio" value="1" checked="checked">
+                        </div>
+                        <div class="mui-input-row mui-radio">
+                            <label style="display: inline-block;">复投</label>
+                            <input name="is_futou" type="radio" value="2">
+                        </div>
+                    </div>
 					<div class="mui-input-row">
 						<label>投资金额（元）</label>
 						<input type="text" placeholder="请输入投资金额（仅限数字）" id="amount">
@@ -52,6 +62,7 @@
 					var telnum = document.getElementById('telnum').value;
 					var remark = document.getElementById('remark').value;
 					var amount = document.getElementById('amount').value;
+					var is_futou = mui('input[name="is_futou"]:checked')[0].value;
 //					amount = parseFloat(amount);
 					var term = document.getElementById('term').value;
 					var re = /^1[1,2,3,4,6,5,7,8,9]\d{9}$/;
@@ -72,6 +83,7 @@
 						url: "http://m.wafuli.cn/app/submit_finance/",
 						type: 'post',
 						data: {
+						    'submit_type':is_futou,
 							'id': id,
 							'amount': amount,
 							'term': term,
