--- a/account/m_account_welfare_media.html
+++ b/account/m_account_welfare_media.html
@@ -37,7 +37,7 @@
             			<div class="mui-scroll" style="width: 56rem;position: static;">
         					<ul class="mui-table-view-right">
         						<li class="item_line m-head m-right" >
-        							<div class="column_2 column m-head">提交日期</div>
+        							<div class="column_2 column m-head">投资时间</div>
         							<div class="column_3 column m-head">投资金额/<br />投资标期</div>
         							<div class="column_6 column m-head">审核状态/<br />返现福币</div>
         							<div class="column_4 column m-head">审核信息</div>
@@ -91,7 +91,7 @@
 
 					function getList(obj, ul_left, ul_right, n) {
 						console.log(obj);
-						var url = '/usereventlist/?event_type=9&user=' + info.id;
+						var url = 'http://m.wafuli.cn/usereventlist/?event_type=9&user='+info.userid;
 						mui.ajax(url, {
 							data: {
 							    token:UserInfo.token(),
@@ -168,9 +168,12 @@
 				mui.confirm("是否要删除该条数据", "提示", btnArry, function(e) {
 					if(e.index == 1) {
 
-						mui.ajax("/userevent/" + dataId + "/", {
+						mui.ajax("http://m.wafuli.cn/userevent/" + dataId + "/", {
 							dataType: 'json', //服务器返回json格式数据
 							type: 'delete', //HTTP请求类型
+							data: {
+                                token:UserInfo.token(),
+                            },
 							timeout: 10000, //超时时间设置为10秒；
 							success: function(data) {
 								mui(".item" + dataId).each(function() {
@@ -234,17 +237,22 @@
                     }, 10);
                 }
             });
-			mui('.mui-table-view-right').on('tap', '.pro_editor', function(e) {
-                if(!UserInfo.has_login()) {
-                    tologin();
-                } else {
-                    var project_id = this.getAttribute('data-id'); //获取自定义data-id属性
-                    var targetTab = 'm_account_detail_media.html';
-                    tempview.loadURL(targetTab);
-                    setTimeout(function() {
-                        tempview.show('pop-in');
-                    }, 10);
-                }
+            mui('.mui-table-view-right').on('tap', '.pro_editor', function() {
+                var project_id = this.getAttribute('data-id'); //获取自定义data-id属性
+
+                console.log(project_id);
+                mui.openWindow({
+                    url: "m_account_detail_finance.html",
+                    id: "m_account_detail_finance2.html",
+                    styles: {
+                        top: 0,
+                        bottom: 0,
+                        hardwareAccelerated:true
+                    },
+                    extras:{
+                        project_id:project_id
+                    }
+                });
             });
             mui('.mui-bar-nav').on('tap', 'a', function(e) {
                tempview.hide();     
