--- a/m_account_index.html
+++ b/m_account_index.html
@@ -67,7 +67,7 @@
 				<li class="mui-table-view-cell mui-col-sm-3 mui-col-xs-3 li-common">
 					<a class="icon-url" href="account/m_account_welfare_finance.html">
 						<i class="icon iconfont">&#xe651;</i>
-						<p>福利管理</p>
+						<p>交单记录</p>
 					</a>
 				</li>
 				<li class="mui-table-view-cell mui-col-sm-3 mui-col-xs-3 li-common">
