--- a/m_account_index.html
+++ b/m_account_index.html
@@ -164,7 +164,7 @@
 				} else {
 					var img = "images/user-0" + dict.userimg + ".png";
 					document.getElementById('userimg').src = img;
-					document.getElementById('user_login').innerHTML = '<number id="mobile">' + dict.mobile + '</number>';  //jzy
+					document.getElementById('user_login').innerHTML = '<number id="mobile">' + dict.mobile + '</number><span id="vip_level" class="vip-level">Lv.'+ dict.level +'</span>';  //jzy
 					document.getElementById('accu_income').innerHTML = dict.accu_income;
 					document.getElementById('balance').innerText = dict.balance
 					document.getElementById('scores').innerText = dict.scores;
